--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
       <a href="#about">サロンについて</a>
       <a href="#pricing">料金</a>
       <a href="recording-guide.html">録音ガイド</a>
-      <a href="request-form.html" class="cta-nav">詳細依頼</a>
+      <a href="https://forms.gle/u6KXppEsxdnw6g3W8" target="_blank" class="cta-nav">簡単依頼</a>
+      <a href="request-form.html">詳細依頼</a>
       <a href="#faq">よくある質問</a>
       <a href="#contact">お問い合わせ</a>
     </div>
@@ -95,6 +96,10 @@
           <a href="#contact" class="cta accent">
             <i class="fas fa-envelope"></i>
             ご相談・ご依頼はこちら
+          </a>
+          <a href="https://forms.gle/u6KXppEsxdnw6g3W8" target="_blank" class="cta">
+            <i class="fas fa-paper-plane"></i>
+            🚀 簡単依頼フォーム
           </a>
           <a href="recording-guide.html" class="cta">
             <i class="fas fa-book-open"></i>
@@ -426,21 +431,21 @@
           <h4 class="price-section-title">💳 お支払い方法</h4>
           <div class="price-grid">
             <div class="price-item featured">
-              <div class="price-name">🎁 Amazonギフトカード</div>
-              <div class="price-description">現在利用可能な支払い方法</div>
+              <div class="price-name">💰 PayPay</div>
+              <div class="price-description">推奨支払い方法・手数料なし</div>
               <div class="price-amount">対応中</div>
-              <div class="price-note">番号がわかるように両面の写真をお送りください。また、個人情報保護のため、カードと番号が確認できるようお願いします。</div>
+              <div class="price-note">QRコード決済で簡単・安全</div>
+            </div>
+
+            <div class="price-item">
+              <div class="price-name">🎁 Amazonギフトカード</div>
+              <div class="price-description">PayPayが使えない場合の代替手段</div>
+              <div class="price-amount">対応中</div>
+              <div class="price-note">番号がわかるように両面の写真をお送りください</div>
             </div>
 
             <div class="price-item" style="opacity: 0.5; background: #f5f5f5;">
               <div class="price-name" style="color: var(--text-muted);">🏦 銀行振込</div>
-              <div class="price-description" style="color: var(--text-muted);">現在停止中</div>
-              <div class="price-amount" style="color: var(--text-muted);">停止中</div>
-              <div class="price-note" style="color: var(--text-muted);">準備中</div>
-            </div>
-
-            <div class="price-item" style="opacity: 0.5; background: #f5f5f5;">
-              <div class="price-name" style="color: var(--text-muted);">💰 PayPay</div>
               <div class="price-description" style="color: var(--text-muted);">現在停止中</div>
               <div class="price-amount" style="color: var(--text-muted);">停止中</div>
               <div class="price-note" style="color: var(--text-muted);">準備中</div>
@@ -453,7 +458,8 @@
         <strong>💡 ココナラ・SKIMA経由の料金について</strong><br>
         サービス手数料が加算されるため、表示価格が異なります。X（DM）からのご依頼では、上記の通常価格でご案内しています。<br><br>
         <strong>🎁 お支払い方法について</strong><br>
-        現在はAmazonギフトカードのみ対応しております。その他の支払い方法は準備中です。
+        <strong style="color: var(--accent);">PayPay決済を推奨</strong>しております。手数料なしで安全・簡単にお支払いいただけます。<br>
+        PayPayが使えない場合は、Amazonギフトカードでも対応可能です。
       </div>
     </div>
 
@@ -477,9 +483,25 @@
           <strong style="color: var(--warning);">納期について:</strong> 現在すべてのプランで<span style="color: var(--warning); font-weight: bold;">1か月前後</span>のお時間をいただいております
         </div>
         <div style="padding: 15px; background: #d1ecf1; border: 2px solid #17a2b8; border-radius: 8px;">
-          <strong style="color: #17a2b8;">お支払いについて:</strong> 仮MIX確認・修正完了後のご入金で安心（Amazonギフトカード）
+          <strong style="color: #17a2b8;">お支払いについて:</strong> 仮MIX確認・修正完了後のご入金で安心（PayPay推奨）
         </div>
       </div>
+    </div>
+
+    <!-- 簡単依頼フォーム案内 -->
+    <div class="card" style="background: var(--gradient); color: var(--primary-dark); border: 2px solid var(--primary); margin: 30px 0;">
+      <h3 style="color: var(--primary-dark); margin-bottom: 15px;">
+        <i class="fas fa-paper-plane"></i>
+        簡単に依頼したい方へ
+      </h3>
+      <p style="color: var(--primary-dark); margin-bottom: 20px;">
+        「とりあえず依頼したい」「シンプルに進めたい」そんな方には、簡単依頼フォームがおすすめ！<br>
+        必要最小限の項目で、スムーズにご依頼いただけます。
+      </p>
+      <a href="https://forms.gle/u6KXppEsxdnw6g3W8" target="_blank" style="display: inline-flex; align-items: center; gap: 8px; background: var(--primary); color: white; padding: 12px 24px; border-radius: 30px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;">
+        <i class="fas fa-rocket"></i>
+        簡単依頼フォームを使う
+      </a>
     </div>
 
     <!-- 詳細依頼フォーム案内 -->
@@ -513,6 +535,7 @@
           <h3>ご依頼・MIX方針ご要望・音源受領</h3>
           <p>
             下記のいずれかの方法でお気軽にご連絡ください。<br>
+            • <strong><a href="https://forms.gle/u6KXppEsxdnw6g3W8" target="_blank" style="color: var(--primary);">🚀 簡単依頼フォーム</a></strong> - 必要最小限で簡単<br>
             • <strong><a href="request-form.html" style="color: var(--primary);">詳細依頼フォーム</a></strong> - 詳細設定で文章自動生成<br>
             • <a href="https://x.com/ryuzanmix" target="_blank" rel="noopener" style="color: var(--primary);">X（Twitter）のDM</a> - 最もお得で迅速<br>
             • <a href="mailto:ryuzan.mix@gmail.com?subject=MIX依頼のご相談&body=こんにちは、竜山つむぎさんへMIXの件でご連絡です。" style="color: var(--primary);">メール</a> - 詳細な相談に最適<br>
@@ -598,9 +621,10 @@
           <h3>修正完了・ご入金</h3>
           <p>
             修正作業完了後、ご入金をお願いいたします。<br>
-            • <strong>お支払い方法：Amazonギフトカード</strong><br>
+            • <strong>お支払い方法：PayPay（推奨）、Amazonギフトカード</strong><br>
             • 修正なしの場合は仮MIX確認後にご入金<br>
-            • 番号がわかるように両面の写真をお送りください<br>
+            • PayPayの場合はQRコードまたは送金リンクをお送りします<br>
+            • Amazonギフトカードの場合は番号両面の写真をお送りください<br>
             ご入金確認後、正式な音源準備に入ります。
           </p>
         </div>
@@ -648,6 +672,9 @@
         <div style="padding: 12px; background: rgba(255, 255, 255, 0.9); border-radius: 8px; border-left: 4px solid #17a2b8;">
           <strong style="color: #17a2b8;">入金タイミング：</strong>仮MIX確認・修正完了後にご入金
         </div>
+        <div style="padding: 12px; background: rgba(255, 255, 255, 0.9); border-radius: 8px; border-left: 4px solid var(--success);">
+          <strong style="color: var(--success);">支払い方法：</strong>PayPay推奨、Amazonギフトカードも対応
+        </div>
         <div style="padding: 12px; background: rgba(255, 255, 255, 0.9); border-radius: 8px; border-left: 4px solid #dc3545;">
           <strong style="color: #dc3545;">修正について：</strong>一度にすべて詳細にご指示ください（無料2回まで）
         </div>
@@ -691,6 +718,24 @@
 
     <div class="faq-item">
       <details>
+        <summary>簡単依頼フォームと詳細依頼フォームの違いは？</summary>
+        <p><strong>簡単依頼フォーム：</strong>必要最小限の項目で、すぐに依頼したい方向け。Googleフォームで簡単入力。<br>
+        <strong>詳細依頼フォーム：</strong>細かい設定まで指定したい方向け。プロ仕様の設定でDM用文章を自動生成。<br><br>
+        初めての方や「とりあえず依頼したい」方は<a href="https://forms.gle/u6KXppEsxdnw6g3W8" target="_blank" style="color: var(--primary);">簡単依頼フォーム</a>、理想の仕上がりを細かく伝えたい方は<a href="request-form.html" style="color: var(--primary);">詳細依頼フォーム</a>をお使いください。</p>
+      </details>
+    </div>
+
+    <div class="faq-item">
+      <details>
+        <summary>PayPay支払いの方法は？</summary>
+        <p>仮MIX確認・修正完了後に、PayPayのQRコードまたは送金リンクをお送りします。<br>
+        スマートフォンのPayPayアプリから簡単にお支払いいただけます。手数料もかからず、すぐに入金確認ができるため推奨しております。<br>
+        PayPayが使えない場合は、Amazonギフトカードでもお支払い可能です。</p>
+      </details>
+    </div>
+
+    <div class="faq-item">
+      <details>
         <summary>スマホ録音でも大丈夫？</summary>
         <p>大歓迎です😊 最新のスマートフォンは録音品質が向上しており、適切なノイズ除去処理で十分な品質に仕上げることができます。まずは気軽にご相談ください！<br>
         詳しい録音方法は<a href="recording-guide.html" style="color: var(--primary);">録音ガイド</a>をご覧ください。</p>
@@ -714,7 +759,7 @@
     <div class="faq-item">
       <details>
         <summary>入金のタイミングはいつですか？</summary>
-        <p>仮MIX音源をお送りし、ご確認・修正作業が完了した後にご入金をお願いしております。つまり、<strong>最終的な仕上がりにご納得いただいてからのお支払い</strong>となりますので、安心してご依頼ください。現在はAmazonギフトカードのみ対応しております。</p>
+        <p>仮MIX音源をお送りし、ご確認・修正作業が完了した後にご入金をお願いしております。つまり、<strong>最終的な仕上がりにご納得いただいてからのお支払い</strong>となりますので、安心してご依頼ください。PayPay、Amazonギフトカードに対応しております。</p>
       </details>
     </div>
 
@@ -795,12 +840,17 @@
       </div>
 
       <div class="contact-buttons">
-        <a href="https://x.com/ryuzanmix" class="contact-button primary" target="_blank" rel="noopener">
+        <a href="https://forms.gle/u6KXppEsxdnw6g3W8" target="_blank" class="contact-button primary">
+          <i class="fas fa-rocket"></i>
+          🚀 簡単依頼フォーム
+        </a>
+
+        <a href="https://x.com/ryuzanmix" class="contact-button accent" target="_blank" rel="noopener">
           <i class="fab fa-twitter"></i>
           XのDMで相談する（@ryuzanmix）
         </a>
 
-        <a href="request-form.html" class="contact-button accent">
+        <a href="request-form.html" class="contact-button">
           <i class="fas fa-magic"></i>
           詳細依頼フォーム
         </a>
@@ -832,8 +882,9 @@
           お得情報
         </h4>
         <p style="margin: 0; color: var(--text-light);">
-          <strong>X（DM）からのご依頼が最もお得！</strong><br>
-          サービス手数料がかからないため、表示価格そのままでご利用いただけます。
+          <strong>X（DM）・簡単依頼フォームからのご依頼が最もお得！</strong><br>
+          サービス手数料がかからないため、表示価格そのままでご利用いただけます。<br>
+          <strong style="color: var(--accent);">PayPay支払い推奨</strong>で、さらにスムーズなお取引が可能です。
         </p>
       </div>
     </div>
