--- a/recording-guide.html
+++ b/recording-guide.html
@@ -31,6 +31,7 @@
       <a href="index.html#about">サロンについて</a>
       <a href="index.html#pricing">料金</a>
       <a href="recording-guide.html" class="current">録音ガイド</a>
+      <a href="https://forms.gle/u6KXppEsxdnw6g3W8" target="_blank">簡単依頼</a>
       <a href="request-form.html">詳細依頼</a>
       <a href="index.html#faq">よくある質問</a>
       <a href="index.html#contact">お問い合わせ</a>
@@ -780,192 +781,4 @@
         </div>
 
         <div style="margin-top: 20px; padding: 15px; background: var(--primary-light); border-radius: 8px;">
-          <strong>命名のルール：</strong>
-          <ul style="margin-top: 10px;">
-            <li>「rec_vo_」で始める（録音ボーカルの意味）</li>
-            <li>パート名を明記（main、harmony、chorus等）</li>
-            <li>複数テイクがある場合は数字を追加（1、2、3...）</li>
-            <li>ハモリは音域を指定（high、low、mid等）</li>
-          </ul>
-        </div>
-      </div>
-
-      <!-- アップロード方法 -->
-      <h3 style="color: var(--primary-dark); margin: 30px 0 20px;">📤 アップロード＆共有方法</h3>
-      
-      <div class="app-grid">
-        <div class="app-card">
-          <div class="app-header">
-            <div class="app-icon" style="background: #4285f4;">📁</div>
-            <h3 class="app-name">ギガファイル便</h3>
-            <span class="app-rating">おすすめ★★★</span>
-          </div>
-          <p style="margin-bottom: 15px; color: var(--text-light);">最も利用頻度の高いファイル送信サービス</p>
-          <ol class="step-list">
-            <li><a href="https://gigafile.nu/" target="_blank">https://gigafile.nu/</a> にアクセス</li>
-            <li>ファイルをドラッグ＆ドロップ</li>
-            <li>アップロード完了後、URLをコピー</li>
-            <li>DMでURLを送信</li>
-          </ol>
-        </div>
-
-        <div class="app-card">
-          <div class="app-header">
-            <div class="app-icon" style="background: #34a853;">💾</div>
-            <h3 class="app-name">Google Drive</h3>
-            <span class="app-rating">安定★★☆</span>
-          </div>
-          <p style="margin-bottom: 15px; color: var(--text-light);">Googleアカウントで簡単共有</p>
-          <ol class="step-list">
-            <li>Google Driveにファイルをアップロード</li>
-            <li>ファイルを右クリック→「共有」</li>
-            <li>「リンクを知っている全員」に設定</li>
-            <li>「リンクをコピー」してDMで送信</li>
-          </ol>
-        </div>
-
-        <div class="app-card">
-          <div class="app-header">
-            <div class="app-icon" style="background: #007ee5;">📦</div>
-            <h3 class="app-name">Dropbox</h3>
-            <span class="app-rating">高機能★★☆</span>
-          </div>
-          <p style="margin-bottom: 15px; color: var(--text-light);">プロ仕様の安定したサービス</p>
-          <ol class="step-list">
-            <li>Dropboxにファイルをアップロード</li>
-            <li>ファイルの「共有」をクリック</li>
-            <li>「リンクを作成」</li>
-            <li>生成されたURLをDMで送信</li>
-          </ol>
-        </div>
-      </div>
-
-      <div class="tips-box">
-        <div class="tips-title">
-          <i class="fas fa-upload"></i>
-          アップロードのコツ
-        </div>
-        <ul>
-          <li><strong>Wi-Fi環境：</strong>モバイル通信よりWi-Fi推奨</li>
-          <li><strong>ファイルサイズ：</strong>大容量の場合は圧縮せず分割</li>
-          <li><strong>有効期限：</strong>ギガファイル便は7日間有効</li>
-          <li><strong>複数ファイル：</strong>ZIPで圧縮してまとめて送信</li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- よくある質問 -->
-    <div class="platform-section">
-      <h2 style="color: var(--primary-dark); margin-bottom: 25px;">❓ よくある質問</h2>
-      
-      <details style="margin-bottom: 15px; border-radius: 12px; overflow: hidden; border: 1px solid var(--border);">
-        <summary style="padding: 15px; background: var(--card); cursor: pointer; font-weight: 600;">
-          スマホの内蔵マイクで大丈夫？
-        </summary>
-        <div style="padding: 15px; background: white;">
-          <p>はい、最新のスマートフォンなら十分な品質で録音できます。ただし、以下の点にご注意ください：</p>
-          <ul>
-            <li>マイクから20-30cm離れて録音</li>
-            <li>静かな環境を選ぶ</li>
-            <li>手で覆わないよう注意</li>
-          </ul>
-        </div>
-      </details>
-
-      <details style="margin-bottom: 15px; border-radius: 12px; overflow: hidden; border: 1px solid var(--border);">
-        <summary style="padding: 15px; background: var(--card); cursor: pointer; font-weight: 600;">
-          録音に失敗した部分がある場合は？
-        </summary>
-        <div style="padding: 15px; background: white;">
-          <p>大丈夫です！失敗した部分は別ファイルで録り直して、以下のようにファイル名をつけてください：</p>
-          <ul>
-            <li>rec_vo_main1.wav（成功した部分）</li>
-            <li>rec_vo_main2.wav（録り直した部分）</li>
-          </ul>
-          <p>どの部分を録り直したかもメモでお知らせください。</p>
-        </div>
-      </details>
-
-      <details style="margin-bottom: 15px; border-radius: 12px; overflow: hidden; border: 1px solid var(--border);">
-        <summary style="padding: 15px; background: var(--card); cursor: pointer; font-weight: 600;">
-          ハモリは何トラックまで録音すればいい？
-        </summary>
-        <div style="padding: 15px; background: white;">
-          <p>基本的には<strong>メイン+ハモリ2トラック</strong>で十分です。追加したい場合は：</p>
-          <ul>
-            <li>rec_vo_main.wav（メインボーカル）</li>
-            <li>rec_vo_harmony1.wav（ハモリ1）</li>
-            <li>rec_vo_harmony2.wav（ハモリ2）</li>
-            <li>rec_vo_harmony3.wav（追加ハモリ1トラック毎+¥1,000）</li>
-          </ul>
-        </div>
-      </details>
-
-      <details style="margin-bottom: 15px; border-radius: 12px; overflow: hidden; border: 1px solid var(--border);">
-        <summary style="padding: 15px; background: var(--card); cursor: pointer; font-weight: 600;">
-          ファイルサイズが大きすぎる場合は？
-        </summary>
-        <div style="padding: 15px; background: white;">
-          <p>以下の方法で対処してください：</p>
-          <ul>
-            <li><strong>複数ファイル：</strong>パートごとに分けて個別アップロード</li>
-            <li><strong>ZIP圧縮：</strong>複数ファイルをまとめて圧縮</li>
-            <li><strong>Google Drive：</strong>大容量ファイルに対応</li>
-          </ul>
-          <p>※音質を下げる（MP3変換等）はしないでください</p>
-        </div>
-      </details>
-    </div>
-
-    <!-- お問い合わせ -->
-    <div style="text-align: center; background: var(--bg-secondary); padding: 40px; border-radius: 20px; margin: 40px 0;">
-      <h3 style="color: var(--primary-dark); margin-bottom: 15px;">📞 録音でお困りの方へ</h3>
-      <p style="margin-bottom: 25px; color: var(--text-light);">
-        録音方法がわからない、うまく録音できない場合は<br>
-        お気軽にご相談ください。丁寧にサポートします😊
-      </p>
-      <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
-        <a href="https://x.com/ryuzanmix" target="_blank" style="background: var(--primary); color: white; padding: 12px 24px; border-radius: 25px; text-decoration: none; font-weight: 600;">
-          <i class="fab fa-twitter"></i> XのDMで相談
-        </a>
-        <a href="mailto:ryuzan.mix@gmail.com" style="background: var(--accent); color: white; padding: 12px 24px; border-radius: 25px; text-decoration: none; font-weight: 600;">
-          <i class="fas fa-envelope"></i> メールで相談
-        </a>
-        <a href="index.html#contact" style="background: var(--text-light); color: white; padding: 12px 24px; border-radius: 25px; text-decoration: none; font-weight: 600;">
-          <i class="fas fa-home"></i> メインページ
-        </a>
-      </div>
-    </div>
-  </div>
-
-    </div>
-  </div>
-
-  <script>
-    function scrollToSection(sectionId) {
-      const element = document.getElementById(sectionId);
-      if (element) {
-        element.scrollIntoView({ behavior: 'smooth', block: 'start' });
-      }
-    }
-
-    // FAQ toggle animation
-    document.querySelectorAll('details').forEach(detail => {
-      detail.addEventListener('toggle', function() {
-        if (this.open) {
-          this.style.background = 'var(--primary-light)';
-        } else {
-          this.style.background = '';
-        }
-      });
-    });
-
-    // 外部リンクに rel="noopener" を自動追加
-    document.querySelectorAll('a[target="_blank"]').forEach(link => {
-      if (!link.rel.includes('noopener')) {
-        link.rel = link.rel ? link.rel + ' noopener' : 'noopener';
-      }
-    });
-  </script>
-</body>
-</html>
+          <strong>命名のルール：
