--- a/recording-guide.html
+++ b/recording-guide.html
@@ -631,41 +631,47 @@
         </div>
       </div>
 
+      <!-- 録音サンプル動画 -->
+      <div style="margin-bottom: 40px; text-align: center;">
+        <h3 style="color: var(--primary-dark); margin-bottom: 20px; font-size: var(--font-size-xl);">
+          <i class="fas fa-play-circle" aria-hidden="true"></i>
+          実際の録音例を見てみよう
+        </h3>
+        <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 16px; box-shadow: var(--shadow); margin-bottom: 20px;">
+          <iframe 
+            src="https://www.youtube.com/embed/bnzPJhW9XQg?si=aYq9nmVaVbGVGd_u" 
+            title="録音方法の実例" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" 
+            allowfullscreen
+            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
+          </iframe>
+        </div>
+        <p style="color: var(--text-light); font-size: var(--font-size-small); line-height: 1.6;">
+          💡 この動画では実際のレコーディング中のマイク位置・距離などを確認できます。<br>
+          文章だけでは分からない適切な録音環境や姿勢を、実際の映像で理解できます。
+        </p>
+      </div>
+
       <div class="warning-box" role="region" aria-labelledby="mix-understanding-title">
         <div class="warning-title" id="mix-understanding-title">
           <i class="fas fa-lightbulb" aria-hidden="true"></i>
-          MIXの正しい理解 - 魔法ではありません
+          MIXの正しい理解
         </div>
-        <p><strong>MIXは「録音された素材を最大限に活かし、楽曲として完成させる技術」です。</strong><br>
-        決して魔法ではなく、元の録音品質を超えた結果を生み出すことはできません。</p>
+        <p><strong>MIXは録音された素材を最大限に活かす技術です。</strong>元の録音品質を超えた結果は生み出せません。</p>
         
-        <div class="do-dont">
-          <div class="do-card">
-            <div class="do-title" id="mix-can-do">
-              <i class="fas fa-check-circle" aria-hidden="true"></i>
-              MIXでできること ✨
-            </div>
-            <div style="color: var(--success); font-weight: 500; line-height: 1.8;">
-              • 録音された歌声の魅力を最大限に引き出す<br>
-              • 音質を整え、聞きやすくする<br>
-              • 楽曲全体のバランスを調整する<br>
-              • 軽微なタイミングズレの修正<br>
-              • 自然なエコーやエフェクトの追加<br>
-              • ノイズの除去・軽減
+        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-top: 20px;">
+          <div style="background: #d4edda; padding: 20px; border-radius: 12px; border-left: 4px solid var(--success);">
+            <h4 style="color: var(--success); margin-bottom: 10px;">✅ できること</h4>
+            <div style="color: var(--success); font-size: 14px; line-height: 1.6;">
+              歌声の魅力を引き出す・音質を整える・軽微な修正・エフェクト追加
             </div>
           </div>
-          <div class="dont-card">
-            <div class="dont-title" id="mix-cannot-do">
-              <i class="fas fa-times-circle" aria-hidden="true"></i>
-              MIXでできないこと 🚫
-            </div>
-            <div style="color: var(--error); font-weight: 500; line-height: 1.8;">
-              • 歌唱力そのものを根本的に変える<br>
-              • 極端に音質の悪い録音を完全に修復<br>
-              • 大幅なタイミングズレを自然に修正<br>
-              • 存在しないハモリや歌声を作り出す<br>
-              • 録音されていない音を追加する<br>
-              • 感情表現や歌い方を変える
+          <div style="background: #f8d7da; padding: 20px; border-radius: 12px; border-left: 4px solid var(--error);">
+            <h4 style="color: var(--error); margin-bottom: 10px;">❌ できないこと</h4>
+            <div style="color: var(--error); font-size: 14px; line-height: 1.6;">
+              歌唱力を根本的に変える・極端に悪い録音の完全修復・大幅なズレ修正
             </div>
           </div>
         </div>
@@ -677,9 +683,7 @@
           つまり、録音品質がMIXの仕上がりを決める
         </h4>
         <p><strong>良い録音 × 良いMIX = 素晴らしい仕上がり</strong><br>
-        <strong>悪い録音 × 良いMIX = 限界のある仕上がり</strong></p>
-        <p>だからこそ、このガイドの録音方法が重要なのです。MIX師は皆さんの録音素材を最大限に活かすために全力を尽くしますが、<strong>元の録音品質を超えた奇跡は起こせません</strong>。</p>
-        <p>💡 このガイドの録音方法を実践していただければ、MIXで十分に美しく仕上げることができます！</p>
+        このガイドの録音方法を実践していただければ、MIXで美しく仕上げることができます！</p>
       </div>
 
       <div class="warning-box" role="region" aria-labelledby="key-points-title">
@@ -750,14 +754,16 @@
             <h3 class="app-name">GarageBand</h3>
             <span class="app-rating">おすすめ★★★</span>
           </div>
-          <p style="margin-bottom: 20px; color: var(--text-light); font-weight: 500;">無料・高音質・操作簡単で初心者に最適</p>
+          <p><strong>無料・高音質・操作簡単で初心者に最適</strong><br>
+          <small style="color: #666;">→ iPhoneに標準搭載で追加費用なし、プロレベルの音質で録音可能</small></p>
           <ol class="step-list">
             <li>GarageBandを開く</li>
             <li>「+」→「AUDIO RECORDER」を選択</li>
-            <li>楽曲を別のアプリで再生</li>
-            <li>赤い録音ボタンで録音開始</li>
+            <li>カラオケ音源を別のアプリ（YouTube等）で再生開始</li>
+            <li>音楽に合わせて赤い録音ボタンをタップし、歌唱開始</li>
+            <li>歌い終わったら停止ボタンをタップ</li>
             <li>録音完了後「↓」→「書き出し」→「オーディオ」</li>
-            <li>ファイル形式を「AIFF」に設定</li>
+            <li>ファイル形式を「AIFF」に設定して書き出し</li>
           </ol>
         </article>
 
@@ -768,13 +774,14 @@
             <h3 class="app-name">ボイスメモ</h3>
             <span class="app-rating">簡単★★☆</span>
           </div>
-          <p style="margin-bottom: 20px; color: var(--text-light); font-weight: 500;">標準アプリで手軽に録音可能</p>
+          <p><strong>標準アプリで手軽に録音可能</strong><br>
+          <small style="color: #666;">→ 新たにアプリをダウンロードする必要がなく、すぐに録音を始められる</small></p>
           <ol class="step-list">
             <li>ボイスメモアプリを開く</li>
-            <li>楽曲を別のアプリで再生</li>
-            <li>赤い録音ボタンをタップ</li>
-            <li>録音完了後、停止ボタンをタップ</li>
-            <li>録音データを「共有」でAirDropやメールで送信</li>
+            <li>カラオケ音源を別のアプリ（YouTube等）で再生開始</li>
+            <li>音楽に合わせて赤い録音ボタンをタップし、歌唱開始</li>
+            <li>歌い終わったら停止ボタンをタップ</li>
+            <li>録音データの「共有」ボタンから、ギガファイル便等にアップロード</li>
           </ol>
         </article>
       </div>
@@ -786,9 +793,15 @@
         </div>
         <div style="color: #17a2b8; font-weight: 500; line-height: 1.8;">
           <strong>マイク位置：</strong>口から20-30cm離して録音<br>
-          <strong>環境：</strong>静かな部屋で、カーテンや布団で音を吸収<br>
-          <strong>設定：</strong>機内モードにして通知をOFF<br>
-          <strong>音質：</strong>GarageBandなら44.1kHz/24bitで自動録音
+          <small style="color: #666;">→ 近すぎると息づかいが入り、遠すぎると声が小さく反響してしまうため</small><br><br>
+          <strong>録音環境：</strong>静かな部屋で、カーテンや布団で音を吸収<br>
+          <small style="color: #666;">→ 硬い壁だと声が反響し、生活音が入ると除去が困難になるため</small><br><br>
+          <strong>通知対策：</strong>機内モードまたはおやすみモードに設定<br>
+          <small style="color: #666;">→ 録音中にLINEやメール通知が入ると、その音も一緒に録音されてしまうため</small><br><br>
+          <strong>音質設定：</strong>GarageBandなら44.1kHz/24bitで自動録音<br>
+          <small style="color: #666;">→ CDと同じ高音質で録音でき、MIX時の音質劣化を防げるため</small><br><br>
+          <strong>モニタリング：</strong>録音中はイヤホンでカラオケ音源を聞く<br>
+          <small style="color: #666;">→ スピーカーから音を出すと、その音も一緒に録音されてしまうため</small>
         </div>
       </div>
     </section>
@@ -810,13 +823,15 @@
             <h3 class="app-name">RecForge II</h3>
             <span class="app-rating">おすすめ★★★</span>
           </div>
-          <p style="margin-bottom: 20px; color: var(--text-light); font-weight: 500;">Android最高品質・無料版あり</p>
+          <p><strong>Android最高品質・無料版あり</strong><br>
+          <small style="color: #666;">→ Android機種による音質差を最小限に抑え、WAV形式で高品質録音が可能</small></p>
           <ol class="step-list">
-            <li>Google PlayからRecForge IIをダウンロード</li>
-            <li>アプリを開き「録音」をタップ</li>
-            <li>設定で「WAV 44.1kHz 16bit」を選択</li>
-            <li>楽曲を再生しながら録音開始</li>
-            <li>録音後「共有」→「ファイルで共有」</li>
+            <li>Google PlayからRecForge IIをダウンロード・インストール</li>
+            <li>アプリを開き、設定で「WAV 44.1kHz 16bit」を選択</li>
+            <li>カラオケ音源を別のアプリ（YouTube等）で再生開始</li>
+            <li>音楽に合わせて「録音」ボタンをタップし、歌唱開始</li>
+            <li>歌い終わったら停止ボタンをタップ</li>
+            <li>録音リストから該当ファイルを選択し「共有」→「ファイルで共有」</li>
           </ol>
         </article>
 
@@ -827,13 +842,15 @@
             <h3 class="app-name">Smart Recorder</h3>
             <span class="app-rating">簡単★★☆</span>
           </div>
-          <p style="margin-bottom: 20px; color: var(--text-light); font-weight: 500;">シンプルで使いやすい</p>
+          <p><strong>シンプルで使いやすい</strong><br>
+          <small style="color: #666;">→ 複雑な設定が不要で、録音に集中できるシンプルな操作画面</small></p>
           <ol class="step-list">
-            <li>Smart Recorderをインストール</li>
-            <li>マイクアイコンをタップ</li>
-            <li>設定で最高音質を選択</li>
-            <li>録音開始</li>
-            <li>録音リストから共有</li>
+            <li>Smart Recorderをダウンロード・インストール</li>
+            <li>アプリを開き、設定で最高音質モードを選択</li>
+            <li>カラオケ音源を別のアプリ（YouTube等）で再生開始</li>
+            <li>音楽に合わせてマイクアイコンをタップし、歌唱開始</li>
+            <li>歌い終わったら停止ボタンをタップ</li>
+            <li>録音リストから該当ファイルを選択し共有</li>
           </ol>
         </article>
       </div>
@@ -844,10 +861,16 @@
           Android録音の注意点
         </div>
         <div style="color: var(--warning); font-weight: 500; line-height: 1.8;">
-          <strong>権限設定：</strong>マイクとストレージのアクセス許可が必要<br>
-          <strong>機種差：</strong>メーカーによって標準アプリが異なります<br>
-          <strong>音質設定：</strong>必ず高音質モードに設定してください<br>
-          <strong>容量確保：</strong>録音前にストレージ容量を確認
+          <strong>アプリ権限：</strong>マイクとストレージのアクセス許可が必要<br>
+          <small style="color: #666;">→ 許可しないと録音できず、ファイル保存もできないため</small><br><br>
+          <strong>機種差：</strong>メーカーによって録音アプリの種類や操作が異なります<br>
+          <small style="color: #666;">→ Samsung、SONY、SHARP等で標準アプリが違うため、推奨アプリの使用が安全</small><br><br>
+          <strong>音質設定：</strong>必ず最高音質モード（WAV 44.1kHz推奨）に設定<br>
+          <small style="color: #666;">→ 低音質だとMIX時に音質向上が困難になり、仕上がりに差が出るため</small><br><br>
+          <strong>容量確保：</strong>録音前にストレージ容量を確認<br>
+          <small style="color: #666;">→ 容量不足で録音が途中で停止すると、最初からやり直しになるため</small><br><br>
+          <strong>通知対策：</strong>録音中は通知をOFFにするか機内モードに設定<br>
+          <small style="color: #666;">→ 通知音が録音に混入すると除去が困難になるため</small>
         </div>
       </div>
     </section>
@@ -869,14 +892,16 @@
             <h3 class="app-name">Audacity</h3>
             <span class="app-rating">おすすめ★★★</span>
           </div>
-          <p style="margin-bottom: 20px; color: var(--text-light); font-weight: 500;">無料・多機能・Windows/Mac対応</p>
+          <p><strong>無料・多機能・Windows/Mac対応</strong><br>
+          <small style="color: #666;">→ プロの音楽制作でも使用される本格ソフトが完全無料で利用可能</small></p>
           <ol class="step-list">
-            <li>公式サイトからAudacityをダウンロード</li>
-            <li>「生成」→「トーン」でカラオケ音源準備</li>
-            <li>新規トラックを追加（「トラック」→「新規」→「モノラル」）</li>
-            <li>録音レベルを調整</li>
-            <li>赤い録音ボタンで開始</li>
-            <li>「ファイル」→「書き出し」→「WAVで書き出し」</li>
+            <li>公式サイト（audacityteam.org）からAudacityをダウンロード・インストール</li>
+            <li>Audacityを起動し、マイクが認識されているか確認</li>
+            <li>カラオケ音源を別の音楽プレイヤーで再生開始</li>
+            <li>音楽に合わせて赤い録音ボタンをクリックし、歌唱開始</li>
+            <li>歌い終わったら停止ボタンをクリック</li>
+            <li>「ファイル」→「書き出し」→「オーディオの書き出し」</li>
+            <li>ファイル形式を「WAV」に設定して保存</li>
           </ol>
         </article>
 
@@ -887,14 +912,17 @@
             <h3 class="app-name">GarageBand (Mac)</h3>
             <span class="app-rating">Mac専用★★★</span>
           </div>
-          <p style="margin-bottom: 20px; color: var(--text-light); font-weight: 500;">Mac標準・プロ級品質</p>
+          <p><strong>Mac標準・プロ級品質</strong><br>
+          <small style="color: #666;">→ Macに標準搭載されており、音楽業界でも使用されるプロ仕様の録音品質</small></p>
           <ol class="step-list">
             <li>GarageBandを起動</li>
             <li>「空のプロジェクト」を選択</li>
-            <li>「Audio」→「マイク」を選択</li>
-            <li>カラオケ音源をドラッグ＆ドロップ</li>
-            <li>新しいオーディオトラックで録音</li>
+            <li>「Audio」→「マイク」を選択してオーディオトラックを作成</li>
+            <li>カラオケ音源を別の音楽プレイヤーで再生開始</li>
+            <li>音楽に合わせて録音ボタンをクリックし、歌唱開始</li>
+            <li>歌い終わったら停止ボタンをクリック</li>
             <li>「共有」→「曲をディスクに書き出す」</li>
+            <li>ファイル形式を「AIFF」に設定して書き出し</li>
           </ol>
         </article>
       </div>
@@ -905,10 +933,16 @@
           PC録音のコツ
         </div>
         <div style="color: #17a2b8; font-weight: 500; line-height: 1.8;">
-          <strong>マイク設定：</strong>USB/XLRマイク推奨、内蔵マイクは避ける<br>
-          <strong>サンプルレート：</strong>44.1kHz/24bit または 48kHz/24bit<br>
-          <strong>バッファサイズ：</strong>録音時は大きめ（512samples以上）<br>
-          <strong>モニタリング：</strong>ヘッドホンで音声確認
+          <strong>マイク選択：</strong>USB/XLRマイク推奨（内蔵マイクは音質が劣る）<br>
+          <small style="color: #666;">→ 内蔵マイクはキーボード音やファンノイズを拾いやすく、音質が不安定なため</small><br><br>
+          <strong>音質設定：</strong>44.1kHz/24bit または 48kHz/24bit に設定<br>
+          <small style="color: #666;">→ CD品質以上で録音することで、MIX時の音質劣化を防げるため</small><br><br>
+          <strong>録音環境：</strong>静かな部屋で、エアコンやPCファンの音に注意<br>
+          <small style="color: #666;">→ 継続的なノイズは歌声と混ざり、後から完全に除去することが困難なため</small><br><br>
+          <strong>モニタリング：</strong>ヘッドホンでカラオケ音源を聞きながら録音<br>
+          <small style="color: #666;">→ スピーカーから音を出すと、その音も録音されてしまい音質が悪化するため</small><br><br>
+          <strong>ソフト設定：</strong>録音レベルを事前に調整し、音割れを防ぐ<br>
+          <small style="color: #666;">→ 音割れした部分は修復不可能で、録音し直しが必要になるため</small>
         </div>
       </div>
     </section>
@@ -935,10 +969,14 @@
               やること ✅
             </div>
             <div style="color: var(--success); font-weight: 500; line-height: 1.8;">
-              <strong>頭出し：</strong>音声の開始位置を0秒にする<br>
+              <strong>頭出し：</strong>カラオケ音源と歌声のタイミングを完全に一致させる<br>
+              <small style="color: #666;">→ タイミングがずれていると、MIX時に楽器と歌がバラバラに聞こえてしまうため</small><br><br>
               <strong>ファイル名：</strong>内容が分かる名前をつける<br>
+              <small style="color: #666;">→ 「録音1.wav」では、どの曲のどの部分か分からず、MIX作業で混乱するため</small><br><br>
               <strong>トラック分け：</strong>メイン・ハモリを別ファイルで<br>
-              <strong>音質確認：</strong>WAV/AIFF形式で保存
+              <small style="color: #666;">→ 1つのファイルに混ざっていると、個別の音量調整やエフェクトが適用できないため</small><br><br>
+              <strong>音質確認：</strong>WAV/AIFF形式で保存<br>
+              <small style="color: #666;">→ MP3は圧縮により音質が劣化し、MIX時にさらに劣化が重なってしまうため</small>
             </div>
           </div>
           <div class="dont-card">
@@ -948,9 +986,13 @@
             </div>
             <div style="color: var(--error); font-weight: 500; line-height: 1.8;">
               <strong>ノイズ除去：</strong>自己判断での編集は禁止<br>
+              <small style="color: #666;">→ 不適切な処理で歌声まで削ってしまい、音質が大幅に悪化する可能性があるため</small><br><br>
               <strong>エコー追加：</strong>リバーブ等のエフェクト禁止<br>
+              <small style="color: #666;">→ 後から除去できないため、MIX時の調整が不可能になるため</small><br><br>
               <strong>音量調整：</strong>ノーマライズ等の処理禁止<br>
-              <strong>MP3圧縮：</strong>非可逆圧縮は音質劣化
+              <small style="color: #666;">→ 元の音量バランスが分からなくなり、適切なMIXができなくなるため</small><br><br>
+              <strong>MP3圧縮：</strong>非可逆圧縮は音質劣化<br>
+              <small style="color: #666;">→ 一度圧縮すると高音質に戻せず、MIX後の仕上がりに影響するため</small>
             </div>
           </div>
         </div>
@@ -999,12 +1041,32 @@
           音源提出の流れ
         </div>
         <ol class="step-list">
-          <li>録音完了後、ファイル名を適切にリネーム</li>
-          <li>ギガファイル便またはGoogle Driveにアップロード</li>
-          <li>共有URLをコピー</li>
-          <li>X（Twitter）のDMまたはメールでURLを送信</li>
-          <li>録音環境や気になる点があれば併記</li>
+          <li>録音完了後、内容が分かるファイル名に変更（例：千本桜_メイン.wav）</li>
+          <li><strong>頭出し確認</strong>：カラオケ音源と歌声のタイミングが正確に合っているかチェック</li>
+          <li>ギガファイル便（gigafile.nu）またはGoogle Driveにファイルをアップロード</li>
+          <li>アップロード完了後、共有URLをコピー</li>
+          <li>X（Twitter）のDM（@ryuzanmix）またはメール（ryuzan.mix@gmail.com）でURLを送信</li>
+          <li>録音環境や気になる点があれば合わせてお知らせください</li>
         </ol>
+        
+        <div style="margin-top: 25px; padding: 25px; background: #e3f2fd; border-radius: 15px; border-left: 6px solid #1976d2;">
+          <h4 style="color: #1976d2; margin-bottom: 15px; font-size: var(--font-size-large);">
+            <i class="fas fa-clock" aria-hidden="true"></i>
+            頭出し（タイミング合わせ）の重要性
+          </h4>
+          <div style="color: #1976d2; font-weight: 500; line-height: 1.7;">
+            <strong>目的：</strong>カラオケ音源と歌声が完全に同じタイミングで再生されるよう調整すること<br><br>
+            <strong>🎵 正しい頭出しとは：</strong><br>
+            • 原曲の歌い出しと同じタイミングで歌声が始まる<br>
+            • 楽器の音と歌声がずれていない<br>
+            • 間奏やブレイクの位置が原曲通りに合っている<br><br>
+            <strong>📱 確認方法：</strong><br>
+            録音した歌声とカラオケ音源を同時再生して、歌い出しのタイミングがぴったり合うかチェック<br>
+            （スマホの場合は、2つのアプリを同時に再生して確認）<br><br>
+            <strong style="color: var(--warning);">💡 タイミングがずれている場合：</strong><br>
+            録音状況をお知らせください。当サロンでタイミング調整いたします！
+          </div>
+        </div>
       </div>
     </section>
 
