--- a/index.html
+++ b/index.html
@@ -123,20 +123,21 @@
 
       <div class="hero-illust">
         <div class="playlist-section" id="playlist">
-        <div class="playlist-section" id="playlist">
           <h2 class="section-title">歌ってみたMIXの実績・サンプル音源集</h2>
-          <p class="playlist-subtitle">クロスフェードポートフォリオ</p>
+          <p class="playlist-subtitle">準備中</p>
+          
+          <a href="https://x.com/ryuzanmix/status/1940267868761071883" 
+             class="playlist-button" target="_blank" rel="noopener">
+            🎧 サンプルはXの固定ツイートをご覧ください
+          </a>
 
-          <!-- 埋め込みYouTubeクロスフェード動画 -->
-          <div class="video-wrapper" style="text-align:center; margin:20px 0;">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/nOrO6h_xI00?si=kj5uEDpC7CYonn5z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <div class="playlist-wrapper" style="background: #f8f9fa; border: 2px dashed #dee2e6; border-radius: 12px; padding: 40px; text-align: center;">
+            <div style="color: #6c757d; font-size: 1.1rem;">
+              <i class="fas fa-tools" style="font-size: 2rem; margin-bottom: 15px; display: block;"></i>
+              <p style="margin: 0;">YouTubeプレイリストは準備中です</p>
+              <p style="margin: 10px 0 0 0; font-size: 0.9rem;">現在、サンプル音源をXの固定ツイートでご確認いただけます</p>
+            </div>
           </div>
-
-          <div class="playlist-description">
-            <p>こちらのクロスフェードでは、当サロンで仕上げた複数曲のサンプルをまとめてご視聴いただけます。</p>
-            <p>歌い手さんの魅力を最大限に活かしたMIXの仕上がりを、ぜひチェックしてください。</p>
-          </div>
-        </div>          </div>
 
           <div class="playlist-description">
             <p>初めての方も安心してご依頼いただけるよう、MIX内容・納期・価格を明確にご案内しています。</p>
