--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </div>
             <p style="color: var(--text-light); font-size: 1.05rem; line-height: 1.6; max-width: 600px; margin: 0 auto;">
               <strong style="color: var(--primary);">「本当にこのクオリティで依頼できるの？」</strong><br>
-              実際の納品音源で確認してください。あなたの歌声も、これと同じクオリティに仕上げます。
+              実際の納品音源で確認してください。同じ技術と機材で、あなたの歌声を最大限に美しく仕上げます。
             </p>
           </div>
 
@@ -279,7 +279,7 @@
           <div class="playlist-description" style="text-align: center; margin-top: 30px;">
             <p style="color: var(--text-light); font-size: 1rem; line-height: 1.7; max-width: 700px; margin: 0 auto;">
               <strong style="color: var(--primary);">「初めてでも本当に大丈夫？」</strong><br>
-              上記サンプル音源のクオリティで、明確な料金体系・迅速な対応・丁寧なサポートをお約束します。<br>
+              上記サンプル音源と同じ品質基準で、明確な料金体系・迅速な対応・丁寧なサポートをお約束します。<br>
               <span style="color: var(--accent); font-weight: 600;">あなたの「歌いたい」気持ちを、全力でサポートします。</span>
             </p>
           </div>
