--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               <iframe 
                 width="560" 
                 height="315" 
-                src="https://www.youtube.com/embed/videoseries?si=vnXNTSnhZ3_2BNll&amp;list=PL2_Tymt_5rAqeauBL94ZcWzlmo4m7FrV9" 
+                src="https://www.youtube.com/embed/videoseries?si=vnXNTSnhZ3_2BNll&amp;list=https://www.youtube.com/embed/videoseries?amp;list=PLhB2bHrWAh_WwV80XSU1bbz9D3pzjwz6R" 
                 title="Ryuzan Mix Salon 実績サンプル音源集" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
@@ -225,7 +225,7 @@
               <p style="color: var(--text-light); font-size: 0.9rem; margin-bottom: 20px; line-height: 1.6;">
                 より多くのサンプル音源を<br>YouTubeで直接確認
               </p>
-              <a href="https://youtube.com/playlist?list=PL2_Tymt_5rAqeauBL94ZcWzlmo4m7FrV9&si=qsa_MNPYSNEMBrQh" 
+              <a href="https://www.youtube.com/embed/videoseries?amp;list=PLhB2bHrWAh_WwV80XSU1bbz9D3pzjwz6R" 
                  target="_blank" rel="noopener"
                  style="background: #ff0000; color: white; padding: 12px 20px; border-radius: 25px; text-decoration: none; font-weight: 600; font-size: 0.95rem; display: inline-flex; align-items: center; gap: 8px; transition: all 0.3s ease;"
                  onmouseover="this.style.background='#cc0000'"
